--- a/HTML/fardigheter.html
+++ b/HTML/fardigheter.html
@@ -8,12 +8,12 @@
         </style>
     <title>Egzon Jashari</title>
     <link rel="stylesheet" href="../CSS/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="../img/bild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
+            <img src="../img/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
             <h1 class="name">Egzon Jashari</h1>
             <p class="subtitle">Systemutvecklare | Student 2024-2026</p>
         </div>
@@ -30,15 +30,15 @@
             <section>
                 <h2>Mina färdigheter</h2>
                 <ul class="skills-list">
-                    <li><i class="fa-solid fa-code" aria-label="C#"></i> C#</li>
-                    <li><i class="fa-brands fa-js" aria-label="JavaScript"></i> JavaScript</li>
-                    <li><i class="fa-solid fa-database" aria-label="SQL"></i> SQL</li>
-                    <li><i class="fa-solid fa-plug" aria-label="ADO.NET"></i> ADO.NET</li>
-                    <li><i class="fa-brands fa-react" aria-label="React"></i> React</li>
-                    <li><i class="fa-brands fa-github" aria-label="GitHub"></i> GitHub</li>
-                    <li><i class="fa-brands fa-html5" aria-label="HTML & CSS"></i> HTML & CSS</li>
-                </ul>
-            </section>
+                    <li><i class="fa-solid fa-code" aria-label="C#"></i>C#</li>
+                    <li><i class="fa-brands fa-js" aria-label="JavaScript"></i>JavaScript</li>
+                    <li><i class="fa-solid fa-database" aria-label="SQL"></i>SQL</li>
+                    <li><i class="fa-solid fa-plug" aria-label="ADO.NET"></i>ADO.NET</li>
+                    <li><i class="fa-brands fa-react" aria-label="React"></i>React</li>
+                    <li><i class="fa-brands fa-github" aria-label="GitHub"></i>GitHub</li>
+                    <li><i class="fa-brands fa-html5" aria-label="HTML & CSS"></i>HTML & CSS</li>
+                    <li><i class="fa-solid fa-palette" aria-label="Adobe Photoshop"></i>Adobe Photoshop</li>
+            </ul></section>
         </main>
         <footer class="footer">
             <p>&copy;</p>
