--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,11 +8,12 @@
         </style>
     <title>Egzon Jashari</title>
     <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="../img/bild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
+            <img src="../img/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
             <h1 class="name">Egzon Jashari</h1>
             <p class="subtitle">Systemutvecklare | Student 2024-2026</p>
         </div>
