--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="../img/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
+            <img src="../IMG/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
             <h1 class="name">Egzon Jashari</h1>
             <p class="subtitle">Systemutvecklare | Student 2024-2026</p>
         </div>
