Cleaned the CSS sheet. Worked on CV and Contacts.

--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -33,23 +33,23 @@
             <div class="cv-table">
                 <div class="cv-row">
                     <div class="cv-left">
-                        <h4>Systemutvecklare</h4>
-                        <p><strong>Företag AB</strong></p>
-                        <span class="date">2023 - Nuvarande</span>
+                        <h4>Coach/behandlingsassistent</h4>
+                        <p><strong>Varbergs kommun, Varberg</strong></p>
+                        <span class="date">2016-2024</span>
                     </div>
                     <div class="cv-right">
-                        <p>Utveckling av webbaserade system med moderna teknologier såsom JavaScript, React och .NET.</p>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, asperiores.</p>
                     </div>
                 </div>
 
                 <div class="cv-row">
                     <div class="cv-left">
-                        <h4>IT-support</h4>
-                        <p><strong>Tech Solutions</strong></p>
-                        <span class="date">2021 - 2023</span>
+                        <h4>Dokumentservice</h4>
+                        <p><strong>Oslo, Norge</strong></p>
+                        <span class="date">2014 - 2016</span>
                     </div>
                     <div class="cv-right">
-                        <p>Hantering av IT-supportärenden, felsökning och systemadministration.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eius.</p>
                     </div>
                 </div>
             </div>
@@ -61,45 +61,49 @@
                 <div class="cv-row">
                     <div class="cv-left">
                         <h4>Systemutveckling</h4>
-                        <p><strong>Högskolan XYZ</strong></p>
+                        <p><strong>Campus, Varberg</strong></p>
                         <span class="date">2024 - 2026</span>
                     </div>
                     <div class="cv-right">
-                        <p>Studerar mjukvaruutveckling med fokus på backend och frontend.</p>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, cupiditate?</p>
                     </div>
                 </div>
 
                 <div class="cv-row">
                     <div class="cv-left">
-                        <h4>Teknikprogrammet</h4>
-                        <p><strong>Gymnasiet ABC</strong></p>
-                        <span class="date">2019 - 2022</span>
+                        <h4>Undersköterska</h4>
+                        <p><strong>Hermods, Varberg</strong></p>
+                        <span class="date">2022-2024</span>
                     </div>
                     <div class="cv-right">
-                        <p>Inriktning på IT och programmering.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, neque!</p>
+                    </div>
+                </div>
+
+                <div class="cv-row">
+                    <div class="cv-left">
+                        <h4>Kemivetenskap</h4>
+                        <p><strong>KTH, Stockholm</strong></p>
+                        <span class="date">2011 - 2014</span>
+                    </div>
+                    <div class="cv-right">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quasi?</p>
+                    </div>
+                </div>
+
+                <div class="cv-row">
+                    <div class="cv-left">
+                        <h4>Naturvetenskap</h4>
+                        <p><strong>Peder Skrivares, Varberg</strong></p>
+                        <span class="date">2008 - 2011</span>
+                    </div>
+                    <div class="cv-right">
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, maxime!</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="cv-section">
-            <h3>Kompetenser</h3>
-            <ul class="skills-list">
-                <li><i class="fas fa-code"></i> JavaScript, Python, C#</li>
-                <li><i class="fas fa-laptop-code"></i> HTML, CSS, React, .NET</li>
-                <li><i class="fas fa-database"></i> SQL, MongoDB</li>
-                <li><i class="fas fa-code-branch"></i> Git, GitHub</li>
-            </ul>
-        </section>
-
-        <section class="cv-section">
-            <h3>Språk</h3>
-            <ul class="skills-list">
-                <li><i class="fas fa-language"></i> Svenska (Modersmål)</li>
-                <li><i class="fas fa-language"></i> Engelska (Flytande)</li>
-                <li><i class="fas fa-language"></i> Tyska (Grundläggande)</li>
-            </ul>
-        </section>
     </main>
     <footer class="footer">
         <p>&copy;</p>
