--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -84,8 +84,10 @@
         <p>En bankapplikation där användare kan logga in, se sina bankkonton och överföra pengar mellan dem.</p>
         <ul class="skills-list">
             <li>
-                <i class="fab fa-github"></i> 
-                <span>GitHub</span>
+                <li onclick="window.open('https://github.com/jasharicoco/MandalorianBankomaten', '_blank')">
+                    <i class="fab fa-github"></i> 
+                    <span>GitHub</span>
+                </li>
             </li>
         </ul>
     </div>
