Liten ändring i telefon under kontakt

--- a/HTML/kontakt.html
+++ b/HTML/kontakt.html
@@ -31,11 +31,11 @@
                         <i class="fa-solid fa-envelope"></i> 
                         <span>E-post</span>
                     </li>
-                    <li onclick="window.open('https://github.com/egzonjashari', '_blank')">
+                    <li onclick="window.open('https://github.com/jasharicoco', '_blank')">
                         <i class="fa-brands fa-github"></i> 
                         <span>GitHub</span>
                     </li>
-                    <li onclick="window.open('tel:+46700181213', '_blank')">
+                    <li onclick="window.location.href='tel:+46700181213'">
                         <i class="fa-solid fa-phone"></i> 
                         <span>Telefon</span>
                     </li>
