Bort med personlig information

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -20,7 +20,6 @@
     </header>
         <nav class="nav">
             <a href="index.html" class="link-home">Hem</a>
-            <a href="personlig-info.html" class="link-personlig-info">Personlig Information</a>
             <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
             <a href="cv.html" class="link-cv">CV</a>
             <a href="projekt.html" class="link-projekt">Projekt</a>
@@ -29,9 +28,9 @@
         <main id="index" class="container">
             <section>
                 <h2>Välkommen till min personliga hemsida!</h2>
-                <p>Den här sidan fungerar som mitt digitala CV där jag presenterar mig själv, mina färdigheter och projekt. Här kan du få en inblick i mina kunskaper som systemutvecklare och vilka verktyg och teknologier jag behärskar.</p>
-                <p>Du kan också läsa om min bakgrund, arbetslivserfarenhet och utbildning. Under fliken “Projekt” hittar du exempel på de projekt jag har arbetat med, och under “Färdigheter” kan du se de teknologier jag behärskar, såsom C#, JavaScript, React och SQL.</p>
-                <p>Jag hoppas att du finner sidan användbar och inspirerande. Tveka inte att kontakta mig om du vill veta mer eller om du har några frågor!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque necessitatibus incidunt sed libero velit est ratione, molestiae nobis saepe nesciunt!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur dolorum veniam, nihil natus totam suscipit soluta provident sunt, exercitationem recusandae perspiciatis! Molestiae quisquam earum mollitia iste maxime eos, sed at?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, ducimus.</p>
             </section>
         </main>
         <footer class="footer">
