--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="sv">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mitt CV - Egzon Jashari</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+        </style>
+    <title>Egzon Jashari</title>
     <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -18,7 +21,6 @@
 
     <nav class="nav">
         <a href="index.html">Hem</a>
-        <a href="personlig-info.html">Personlig Information</a>
         <a href="fardigheter.html">Färdigheter</a>
         <a href="cv.html" class="active">CV</a>
         <a href="projekt.html">Projekt</a>
