--- a/HTML/kontakt.html
+++ b/HTML/kontakt.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kontakt - Egzon Jashari</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+        </style>
+    <title>Egzon Jashari</title>
     <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -17,7 +20,6 @@
     </header>
     <nav class="nav">
         <a href="index.html" class="link-home">Hem</a>
-        <a href="personlig-info.html" class="link-personlig-info">Personlig Information</a>
         <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
         <a href="cv.html" class="link-cv">CV</a>
         <a href="projekt.html" class="link-projekt">Projekt</a>
