Gömmer menyn på små skärmar. Lyckas inte få till en "fade-effekt" på övergången mellan öppen/stängd.

--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -20,6 +20,9 @@
     </header>
 
     <nav class="nav">
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
+        </div>
         <a href="index.html">Hem</a>
         <a href="fardigheter.html">Färdigheter</a>
         <a href="cv.html" class="active">CV</a>
