--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,7 +18,10 @@
             <p class="subtitle">Systemutvecklare | Student 2024-2026</p>
         </div>
     </header>
-        <nav class="nav">
+    <nav class="nav">
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
+        </div>
             <a href="index.html" class="link-home">Hem</a>
             <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
             <a href="cv.html" class="link-cv">CV</a>
