--- a/HTML/kontakt.html
+++ b/HTML/kontakt.html
@@ -19,6 +19,9 @@
         </div>
     </header>
     <nav class="nav">
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
+        </div>
         <a href="index.html" class="link-home">Hem</a>
         <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
         <a href="cv.html" class="link-cv">CV</a>
