Småpill. Mest på CV och Projekt. Ändrat bakgrundsfärg osv.

--- a/HTML/kontakt.html
+++ b/HTML/kontakt.html
@@ -57,7 +57,7 @@
     </main>
     
     <footer class="footer">
-        <p>&copy;</p>
+        <p>&copy; 2025</p>
     </footer>
     <script src="../JS/script.js" defer></script>
     </body>
