--- a/HTML/fardigheter.html
+++ b/HTML/fardigheter.html
@@ -43,7 +43,7 @@
             </ul></section>
         </main>
         <footer class="footer">
-            <p>&copy;</p>
+            <p>&copy; 2025</p>
         </footer>
         <script src="../JS/script.js" defer></script>
         </body>
