--- a/HTML/index.html
+++ b/HTML/index.html
@@ -37,7 +37,7 @@
             </section>
         </main>
         <footer class="footer">
-            <p>&copy;</p>
+            <p>&copy; 2025</p>
         </footer>
         <script src="../JS/script.js" defer></script>
         </body>
