La till fler projekt för att se hur det ser ut

--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -43,9 +43,31 @@
                         </div>
                         <a href="#modal-skolsystem" class="btn">Mer info</a>
                     </article>
-                </ul>
-                
         
+                    <article class="project-container">
+                        <h3>Banksystem</h3>
+                        <div class="project-content">
+                            <img src="../IMG/bankapp.jpg" alt="Banksystem" class="project-img">
+                            <p>
+                            Ett projekt där vi byggde ett simpelt banksystem för att kunna logga in på en specifik användare och se sina bankkonton. 
+                            Användaren kan även överföra pengar mellan konton.
+                        </p>
+                        </div>
+                        <a href="#modal-banksystem" class="btn">Mer info</a>
+                    </article>
+
+                    <article class="project-container">
+                        <h3>Banksystem</h3>
+                        <div class="project-content">
+                            <img src="../IMG/bankapp.jpg" alt="Banksystem" class="project-img">
+                            <p>
+                            Ett projekt där vi byggde ett simpelt banksystem för att kunna logga in på en specifik användare och se sina bankkonton. 
+                            Användaren kan även överföra pengar mellan konton.
+                        </p>
+                        </div>
+                        <a href="#modal-banksystem" class="btn">Mer info</a>
+                    </article>
+
                     <article class="project-container">
                         <h3>Banksystem</h3>
                         <div class="project-content">
