Fixa så aktiv sida blir highlightad i menyn

--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -23,11 +23,11 @@
         <div class="menu-toggle" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
         </div>
-        <a href="index.html">Hem</a>
-        <a href="fardigheter.html">Färdigheter</a>
+        <a href="index.html" class="link-home">Hem</a>
+        <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
         <a href="cv.html" class="active">CV</a>
-        <a href="projekt.html">Projekt</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="projekt.html" class="link-projekt">Projekt</a>
+        <a href="kontakt.html" class="link-kontakt">Kontakt</a>
     </nav>
 
     <main class="container">
