--- a/HTML/fardigheter.html
+++ b/HTML/fardigheter.html
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
             </div>
             <a href="index.html" class="link-home">Hem</a>
-            <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
+            <a href="fardigheter.html" class="active">Färdigheter</a>
             <a href="cv.html" class="link-cv">CV</a>
             <a href="projekt.html" class="link-projekt">Projekt</a>
             <a href="kontakt.html" class="link-kontakt">Kontakt</a>
