--- a/HTML/index.html
+++ b/HTML/index.html
@@ -22,11 +22,11 @@
         <div class="menu-toggle" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
         </div>
-            <a href="index.html" class="link-home">Hem</a>
-            <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
-            <a href="cv.html" class="link-cv">CV</a>
-            <a href="projekt.html" class="link-projekt">Projekt</a>
-            <a href="kontakt.html" class="link-kontakt">Kontakt</a>
+        <a href="index.html" class="active">Hem</a>
+        <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
+        <a href="cv.html" class="link-cv">CV</a>
+        <a href="projekt.html" class="link-projekt">Projekt</a>
+        <a href="kontakt.html" class="link-kontakt">Kontakt</a>
         </nav>
         <main id="index" class="container">
             <section>
