--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -25,7 +25,7 @@
             <a href="index.html" class="link-home">Hem</a>
             <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
             <a href="cv.html" class="link-cv">CV</a>
-            <a href="projekt.html" class="link-projekt">Projekt</a>
+            <a href="projekt.html" class="active">Projekt</a>
             <a href="kontakt.html" class="link-kontakt">Kontakt</a>
         </nav>
         <main id="projekt" class="container">
