--- a/HTML/kontakt.html
+++ b/HTML/kontakt.html
@@ -26,7 +26,7 @@
         <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
         <a href="cv.html" class="link-cv">CV</a>
         <a href="projekt.html" class="link-projekt">Projekt</a>
-        <a href="kontakt.html" class="link-kontakt">Kontakt</a>
+        <a href="kontakt.html" class="active">Kontakt</a>
     </nav>
     <main id="kontakt" class="container">
         <section>
