--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -23,7 +23,7 @@
         <div class="menu-toggle" onclick="toggleMenu()">
             <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
         </div>
-        <a href="index.html" class="link-home">Hem</a>
+        <a href="../index.html" class="link-home">Hem</a>
         <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
         <a href="cv.html" class="active">CV</a>
         <a href="projekt.html" class="link-projekt">Projekt</a>
