--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -22,7 +22,7 @@
             <div class="menu-toggle" onclick="toggleMenu()">
                 <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
             </div>
-            <a href="index.html" class="link-home">Hem</a>
+            <a href="../index.html" class="link-home">Hem</a>
             <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
             <a href="cv.html" class="link-cv">CV</a>
             <a href="projekt.html" class="active">Projekt</a>
