--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
             <i class="fa-solid fa-bars"></i> <!-- Hamburger icon -->
         </div>
         <a href="index.html" class="active">Hem</a>
-        <a href="fardigheter.html" class="link-fardigheter">Färdigheter</a>
-        <a href="cv.html" class="link-cv">CV</a>
-        <a href="projekt.html" class="link-projekt">Projekt</a>
-        <a href="kontakt.html" class="link-kontakt">Kontakt</a>
+        <a href="HTML/fardigheter.html" class="link-fardigheter">Färdigheter</a>
+        <a href="HTML/cv.html" class="link-cv">CV</a>
+        <a href="HTML/projekt.html" class="link-projekt">Projekt</a>
+        <a href="HTML/kontakt.html" class="link-kontakt">Kontakt</a>
         </nav>
         <main id="index" class="container">
             <section>
