Directory-fixes from changing index location

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
         </style>
     <title>Egzon Jashari</title>
-    <link rel="stylesheet" href="../CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="header-content">
-            <img src="../IMG/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
+            <img src="IMG/profilbild.jpg" alt="Profilbild av Egzon Jashari" class="profile-pic">
             <h1 class="name">Egzon Jashari</h1>
             <p class="subtitle">Systemutvecklare | Student 2024-2026</p>
         </div>
@@ -39,6 +39,6 @@
         <footer class="footer">
             <p>&copy; 2025</p>
         </footer>
-        <script src="../JS/script.js" defer></script>
+        <script src="JS/script.js" defer></script>
         </body>
         </html>
