--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
-        </style>
+    </style>
     <title>Egzon Jashari</title>
     <link rel="stylesheet" href="../CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
@@ -33,86 +33,23 @@
     <main class="container">
         <h2>Mitt CV</h2>
 
-        <section class="cv-section">
+        <section class="cv-section work-experience">
             <h3>Arbetslivserfarenhet</h3>
-            <div class="cv-table">
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Coach/behandlingsassistent</h4>
-                        <p><strong>Varbergs kommun, Varberg</strong></p>
-                        <span class="date">2016-2024</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Temporibus, asperiores.</p>
-                    </div>
-                </div>
-
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Dokumentservice</h4>
-                        <p><strong>Oslo, Norge</strong></p>
-                        <span class="date">2014 - 2016</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, eius.</p>
-                    </div>
-                </div>
-            </div>
+            <div class="cv-table"></div> <!-- Populated by JavaScript -->
         </section>
 
-        <section class="cv-section">
+        <section class="cv-section education">
             <h3>Utbildning</h3>
-            <div class="cv-table">
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Systemutveckling</h4>
-                        <p><strong>Campus, Varberg</strong></p>
-                        <span class="date">2024 - 2026</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt, cupiditate?</p>
-                    </div>
-                </div>
-
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Undersköterska</h4>
-                        <p><strong>Hermods, Varberg</strong></p>
-                        <span class="date">2022-2024</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas, neque!</p>
-                    </div>
-                </div>
-
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Kemivetenskap</h4>
-                        <p><strong>KTH, Stockholm</strong></p>
-                        <span class="date">2011 - 2014</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, quasi?</p>
-                    </div>
-                </div>
-
-                <div class="cv-row">
-                    <div class="cv-left">
-                        <h4>Naturvetenskap</h4>
-                        <p><strong>Peder Skrivares, Varberg</strong></p>
-                        <span class="date">2008 - 2011</span>
-                    </div>
-                    <div class="cv-right">
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum, maxime!</p>
-                    </div>
-                </div>
-            </div>
+            <div class="cv-table"></div> <!-- Populated by JavaScript -->
         </section>
 
     </main>
+    
     <footer class="footer">
         <p>&copy; 2025</p>
     </footer>
+
+    <!-- Link to JavaScript file -->
     <script src="../JS/script.js" defer></script>
-    </body>
-    </html>
+</body>
+</html>
