--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -35,92 +35,9 @@
             <section>
                 <h2>Projekt</h2>
                 <ul class="project-list">
-                    <article class="project-container">
-                        <h3>Skolsystem</h3>
-                        <div class="project-content">
-                            <img src="../IMG/skolapp.jpg" alt="Skolsystem" class="project-img">
-                            <p>
-                                Ett komplett system för att visa information om vilka elever som går på en skola samt vilka lärare som är anställda. 
-                                Användaren kan även lägga till ny personal eller elev.
-                            </p>
-                        </div>
-                        <a href="#modal-skolsystem" class="btn">Mer info</a>
-                    </article>
-        
-                    <article class="project-container">
-                        <h3>Banksystem</h3>
-                        <div class="project-content">
-                            <img src="../IMG/bankapp.jpg" alt="Banksystem" class="project-img">
-                            <p>
-                            Ett projekt där vi byggde ett simpelt banksystem för att kunna logga in på en specifik användare och se sina bankkonton. 
-                            Användaren kan även överföra pengar mellan konton.
-                        </p>
-                        </div>
-                        <a href="#modal-banksystem" class="btn">Mer info</a>
-                    </article>
-
-                    <article class="project-container">
-                        <h3>Banksystem</h3>
-                        <div class="project-content">
-                            <img src="../IMG/bankapp.jpg" alt="Banksystem" class="project-img">
-                            <p>
-                            Ett projekt där vi byggde ett simpelt banksystem för att kunna logga in på en specifik användare och se sina bankkonton. 
-                            Användaren kan även överföra pengar mellan konton.
-                        </p>
-                        </div>
-                        <a href="#modal-banksystem" class="btn">Mer info</a>
-                    </article>
-
-                    <article class="project-container">
-                        <h3>Banksystem</h3>
-                        <div class="project-content">
-                            <img src="../IMG/bankapp.jpg" alt="Banksystem" class="project-img">
-                            <p>
-                            Ett projekt där vi byggde ett simpelt banksystem för att kunna logga in på en specifik användare och se sina bankkonton. 
-                            Användaren kan även överföra pengar mellan konton.
-                        </p>
-                        </div>
-                        <a href="#modal-banksystem" class="btn">Mer info</a>
-                    </article>
+                    <p>Laddar projekt...</p> <!-- Laddningsindikator -->
                 </ul>
             </section>
-
-<!-- Modal för Skolsystem -->
-<div id="modal-skolsystem" class="modal">
-    <div class="modal-content">
-        <a href="#" class="close">&times;</a>
-        <h3>Skolsystem</h3>
-        <p>Detta projekt utvecklades för att effektivt hantera skoladministration. Systemet låter skolpersonal lägga till och hantera elever och lärare.</p>
-        <ul class="skills-list">
-            <li>
-                <li onclick="window.open('https://github.com/jasharicoco/IndividualProject_School', '_blank')">
-                    <i class="fab fa-github"></i> 
-                    <span>GitHub</span>
-                </li>
-            </li>
-        </ul>
-    </div>
-</div>
-
-
-<!-- Modal för Banksystem -->
-<div id="modal-banksystem" class="modal">
-    <div class="modal-content">
-        <a href="#" class="close">&times;</a>
-        <h3>Banksystem</h3>
-        <p>En bankapplikation där användare kan logga in, se sina bankkonton och överföra pengar mellan dem.</p>
-        <ul class="skills-list">
-            <li>
-                <li onclick="window.open('https://github.com/jasharicoco/MandalorianBankomaten', '_blank')">
-                    <i class="fab fa-github"></i> 
-                    <span>GitHub</span>
-                </li>
-            </li>
-        </ul>
-    </div>
-</div>
-
-
         </main>
 
         <footer class="footer">
