La till intresse-lista under färdigheter, samt lite olika färgteman i CSS-mappen för vidare testning

--- a/HTML/fardigheter.html
+++ b/HTML/fardigheter.html
@@ -45,6 +45,22 @@
                     <li><i class="fa-solid fa-palette" aria-label="Adobe Photoshop"></i>Adobe Photoshop</li>
             </ul></section>
 
+            <section>
+                <h2>Mina intressen</h2>
+                <ul class="skills-list">
+                        <li><i class="fa-solid fa-guitar" aria-label="Gitarr"></i>Gitarr</li>
+                        <li><i class="fa-solid fa-camera" aria-label="Fotografering"></i>Fotografering</li>
+                        <li><i class="fa-solid fa-plane" aria-label="Resa"></i>Resa</li>
+                        <li><i class="fa-solid fa-house-user" aria-label="Familjeliv"></i>Familjeliv</li>
+                        <li><i class="fa-solid fa-umbrella-beach" aria-label="Strand & Bad"></i>Strand & Bad</li>
+                        <li><i class="fa-solid fa-utensils" aria-label="Matlagning"></i>Matlagning</li>
+                        <li><i class="fa-solid fa-seedling" aria-label="Grönsaksodling"></i>Grönsaksodling</li>
+                        <li><i class="fa-solid fa-gamepad" aria-label="Datorspelande"></i>Gaming</li>
+                        <li><i class="fa-solid fa-laptop-code" aria-label="Systemutveckling"></i>Systemutveckling</li>
+                    </ul>
+                    
+            </ul></section>
+
         </main>
 
         <footer class="footer">
