Easter-egg: Konami

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <footer class="footer">
             <p>&copy; 2025</p>
         </footer>
-
+        <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
         <script src="JS/script.js" defer></script>
         </body>
         </html>
