--- a/HTML/cv.html
+++ b/HTML/cv.html
@@ -48,8 +48,7 @@
     <footer class="footer">
         <p>&copy; 2025</p>
     </footer>
-
-    <!-- Link to JavaScript file -->
-    <script src="../JS/script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+    <script src="JS/script.js" defer></script>
 </body>
 </html>
