--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -44,6 +44,6 @@
             <p>&copy; 2025</p>
         </footer>
         <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-        <script src="JS/script.js" defer></script>
+        <script src="../JS/script.js" defer></script>
         </body>
         </html>
