--- a/HTML/projekt.html
+++ b/HTML/projekt.html
@@ -35,7 +35,7 @@
             <section>
                 <h2>Projekt</h2>
                 <div class="project-list">
-                    <!-- Dina egna projekt kommer här -->
+                    <!-- Mina egna projekt  här -->
                     <article class="project-container">
                         <h3>Skolsystem</h3>
                         <div class="project-content">
